# Enviroplus-QL

./: .gitignore  LICENSE.md  README.md  pyproject.toml  requirements.txt  setup.sh
api/: query.py  schema.py
api/types/: env.py
server/: __init__.py  main.py
